# encryptdef

./: .bumpversion.cfg  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  test-results.xml
.github/workflows/: main.yml  release.yml
encryptdef/: VERSION.txt  __main__.py  cli.py  core.py  cryptocode.py  interactive_interface.py  interface.py  log.py  settings.py  template.py  utils.py
tests/: conftest.py  test_assigning_a_name_file.py  test_clear_console.py  test_get_new_file_path.py  test_read_file.py  test_write_file.py
